objects/FSL_Work_Type_Arrival_Window__mdt.object
<CustomObject>
    <description>Specifies which times certain Work Types can be scheduled for.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Earliest_Start_Time__c</fullName>
        <label>Earliest Start Time</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Start_Time__c</fullName>
        <label>Latest Start Time</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>FSL Work Type Arrival Window</label>
    <pluralLabel>FSL Work Type Arrival Windows</pluralLabel>
</CustomObject>